tests-build/tests/fail/macros_type_mismatch.stderr
error[E0308]: mismatched types
 --> $DIR/macros_type_mismatch.rs:5:5
  |
5 |     Ok(())
  |     ^^^^^^ expected `()`, found enum `Result`
  |
  = note: expected unit type `()`
                  found enum `Result<(), _>`
help: consider using a semicolon here
  |
5 |     Ok(());
  |           ^
help: try adding a return type
  |
4 | async fn missing_semicolon_or_return_type() -> Result<(), _> {
  |                                             ^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
  --> $DIR/macros_type_mismatch.rs:10:5
   |
9  | async fn missing_return_type() {
   |                                - help: try adding a return type: `-> Result<(), _>`
10 |     return Ok(());
   |     ^^^^^^^^^^^^^^ expected `()`, found enum `Result`
   |
   = note: expected unit type `()`
                   found enum `Result<(), _>`

error[E0308]: mismatched types
  --> $DIR/macros_type_mismatch.rs:14:31
   |
14 | async fn extra_semicolon() -> Result<(), ()> {
   |          ---------------      ^^^^^^^^^^^^^^ expected enum `Result`, found `()`
   |          |
   |          implicitly returns `()` as its body has no tail or `return` expression
   |
   = note:   expected enum `Result<(), ()>`
           found unit type `()`
